--- a/styles.css
+++ b/styles.css
@@ -57,7 +57,7 @@ a:hover {
 
 header {
   text-align: center;
-  background: url('images/ClevelandSkylineNeo-Rouge-copy.jpg') no-repeat ;
+  background: url('https://www.youtube.com/embed/nIKM1Y9PEME?autoplay=1&amp;loop=1&amp;playlist=nIKM1Y9PEME&amp;t=10&amp;mute=1&amp;playsinline=1&amp;controls=0&amp;showinfo=0&amp;autohide=1&amp;allowfullscreen=true&amp;mode=transparent') no-repeat ;
   background-size: cover;
   overflow: hidden;
   padding-top: 60px;
