--- a/styles.css
+++ b/styles.css
@@ -57,7 +57,7 @@ a:hover {
 
 header {
   text-align: center;
-  background: url('') no-repeat ;
+  background: url('images/trophy.mp4') no-repeat ;
   background-size: cover;
   overflow: hidden;
   padding-top: 60px;
