--- a/styles.css
+++ b/styles.css
@@ -182,7 +182,7 @@ h2 {
       display: none;
    } 
    body {
-      background: url("https://assets.codepen.io/6093409/river.jpg") no-repeat;
+      background: url("images/trophy.png") no-repeat;
       background-size: cover;
    }
 }
