--- a/styles.css
+++ b/styles.css
@@ -172,10 +172,10 @@ h2, {
    font-weight: bold;
 }
 h1 {
-   font-size: 1rem;
+   font-size: 5px;
 }
 h2 {
-   font-size: 1rem;
+   font-size: 5xp;
 }
 @media (max-width: 750px) {
    #background-video {
