--- a/styles.css
+++ b/styles.css
@@ -166,7 +166,7 @@ a.social {
 h1, {
    color: black;
    font-weight: bold; text-align: center;
-   font-size: 13em;
+   font-size: 0.5rem;
 }
 h2, {
    color: black;
