--- a/styles.css
+++ b/styles.css
@@ -61,9 +61,9 @@ header {
 header .profile-image {
   margin-top: 50px;
   width: 150px;
-  height: 300px;
+  height: 150px;
   border-radius: 50%;
-  border: 3px solid black;
+  border: 3px solid white;
   transition: all .5s;
 }
 header .profile-image:hover {
