--- a/styles.css
+++ b/styles.css
@@ -183,8 +183,8 @@ h2, {
       background-size: cover;
    }
 }
-a.twitter {
-  background-image: url(images/twitter.svg);
+a.insta {
+  background-image: url(images/insta.svg);
 }
 a.linkedin {
   background-image: url(images/linkedin.svg);
